--- a/web_dynamic/templates/0-hbnb.html
+++ b/web_dynamic/templates/0-hbnb.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/4-common.css?{{ cache_id }}">
+    <link rel="stylesheet" href="styles/3-header.css?{{ cache_id }}">
+    <link rel="stylesheet" href="styles/3-footer.css?{{ cache_id }}">
+    <link rel="stylesheet" href="styles/6-filters.css?{{ cache_id }}">
     <link rel="icon" href="images/icon.png" type="image/png">
     <title>AirBnb Clone</title>
   </head>
